@@ -1,5 +1,13 @@
 2007-02-28  Benoît Dejean  <benoit@placenet.org>
 
+	* src/sysinfo.cpp:
+	
+	Get default system information with uname.
+	Patch by Joe Marcus Clarke <marcus@freebsd.org>.
+	See bug #412953.	
+
+2007-02-28  Benoît Dejean  <benoit@placenet.org>
+
 	* configure.in:
 	* src/openfiles.cpp:
 	
